Fixed alignment issues for each trip

--- a/src/components/flight-search-info/flight-search-info.css
+++ b/src/components/flight-search-info/flight-search-info.css
@@ -1,5 +1,5 @@
 .flight-search-info {
-  margin: 0px 10px 10px 10px
+  /* margin: 0px 10px 10px 10px */
 }
 
 .flight-search-info h3 {
